--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-encore",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "encore dev --watch",
     "lint": "eslint 'front/**/*.{js,ts,tsx}'",
